update manager-manual-judgetemplate